<resources>
    <string name="app_name">Move</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">"Login"</string>
    <string name="forgot_password">"Forgot Password?"</string>
    <string name="sign_up">"Sign up"</string>
    <string name="sign_in">"Sign in"</string>
    <string name="action_config">"Settings"</string>
    <string name="action_log_out">"Log Out"</string>
    <string name="action_cam">"Camera"</string>
    <string name="action_connect">"Connect the Printer"</string>
    <string name="action_disconnect">"Disconnect the Printer"</string>


    <string name="action_sign_in_short">Sign in short</string>
    <string name="title_activity_manage_credit">ManageCreditActivity</string>
    <string name="user">User</string>
    <string name="buy_ticket">Buy Ticket</string>
    <string name="schedule">Schedule</string>
    <string name="map">Route</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="title_activity_schedule">ScheduleActivity</string>
    <string name="telephone">Telephone</string>
    <string name="email">Email</string>
    <string name="forgot_text_view">Please enter your email to search for your account.</string>
    <string name="forgot_edit">Email</string>
    <string name="title_activity_settings">Settings</string>
    <string name="buy_tickets">Buy Ticket</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_maps2">Map</string>
</resources>
